--- a/views/palinsesto.textile
+++ b/views/palinsesto.textile
@@ -1,12 +1,21 @@
-|              | Lunedì                           | Martedì                             | Mercoledì                                               | Giovedì                                   | Venerdì                                           | Sabato                                | Domenica                                  |
-| 16:00-17:00  | ♪                                | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | "PROFILING JOHN DOES":/programmi/390  | ♪                                         |
-| 17:00-18:00  | ♪                                | ♪                                   | "LIVE SHOW":/programmi/503                              | ♪                                         | ♪                                                 | x                                     | ♪                                         |
-| 18:00-18:30  | ♪                                | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | ♪                                     | "IL GARAGE ERMETICO":/programmi/315       |
-| 18:30-19:00  | ♪                                | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | ♪                                     | x                                         |
-| 19:00-19:30  | ♪                                | "ART PALAVER":/programmi/496        | "IT'S ONLY ROCK 'N' ROLL BUT I LIKE IT":/programmi/172  | "DISAGIO OF THE UNIVERSE":/programmi/498  | ♪                                                 | "CALCIO & OLTRE":/programmi/501       | x                                         |
-| 19:30-20:00  | "IL CONFINE":/programmi/123      | x                                   | x                                                       | ♪                                         | ♪                                                 | x                                     | x                                         |
-| 20:00-21:00  | x                                | "ELEMENTO 115":/programmi/497       | 20.15 "I SOLITI SOSPETTI":/programmi/311                | "DEBUGGING ART":/programmi/310            | "IL VENTO DEGLI EVENTI ALLE VENTI":/programmi/500 | ♪                                     | ♪                                         |
-| 21:00-21:30  | ♪                                | "BLISTER":/programmi/124            |                                                         | ♪                                         | SENZA TITOLO                                      | ♪                                     | "IL CASSETTO DEL CASINO":/programmi/363   |
-| 21:30-22:00  | "ROLLOVER DJ":/programmi/125     | x                                   | "HONOLULU EXPRESS":/programmi/374                       | "iBENCHED":/programmi/372                 | x                                                 | ♪                                     | x                                         |
-| 22:00-22:30  | x                                | "BLUES NITE SHOUT":/programmi/168   | x                                                       | x                                         | ♪                                                 | ♪                                     | ♪                                         |
-| 22:30-23:30  | ♪                                | ♪                                   | ♪                                                       | "OKINA IPPO":/programmi/499               | 23.00 "LONG GONE DAY":/programmi/123              | ♪                                     | ♪                                         |
+|_.            |_. Lunedì                                   |_. Martedì                           |_. Mercoledì                                             |_. Giovedì                                 |_. Venerdì                                         |_. Sabato                              |_. Domenica                                  |
+
+
+| 11:00-12:00  | "Profiling Jhon Does [R]":/programmi/390   | ♪                                   | "IL GARAGE ERMETICO [R]":/programmi/315                 | ♪                                         | ♪                                                 | ♪                                     | ♪                                         |
+| 12:00-13:00  | ♪                                          | ♪                                   | ♪                                                       | "ART PALAVER [R]":/programmi/496          | "BLUES NITE SHOUT [R]":/programmi/168             | ♪                                     | ♪                                         |
+                                                            
+| 14:00-15:00  | ♪                                          | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | "PROFILING JOHN DOES":/programmi/390  | ♪                                         |
+| 15:00-16:00  | ♪                                          | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | x                                     | ♪                                         |
+| 16:00-17:00  | ♪                                          | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | x                                     | ♪                                         |
+| 17:00-18:00  | ♪                                          | ♪                                   | "LIVE SHOW":/programmi/503                              | ♪                                         | ♪                                                 | x                                     | ♪                                         |
+| 18:00-18:30  | ♪                                          | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | ♪                                     | "IL GARAGE ERMETICO":/programmi/315       |
+| 18:30-19:00  | ♪                                          | ♪                                   | ♪                                                       | ♪                                         | ♪                                                 | ♪                                     | x                                         |
+| 19:00-19:30  | ♪                                          | "ART PALAVER":/programmi/496        | "IT'S ONLY ROCK 'N' ROLL BUT I LIKE IT":/programmi/172  | "DISAGIO OF THE UNIVERSE":/programmi/498  | ♪                                                 | "CALCIO & OLTRE":/programmi/501       | x                                         |
+| 19:30-20:00  | "IL CONFINE":/programmi/123                | x                                   | x                                                       | ♪                                         | ♪                                                 | x                                     | x                                         |
+| 20:00-21:00  | x                                          | "ELEMENTO 115":/programmi/497       | 20.15 "I SOLITI SOSPETTI":/programmi/311                | "DEBUGGING ART":/programmi/310            | "IL VENTO DEGLI EVENTI ALLE VENTI":/programmi/500 | ♪                                     | ♪                                         |
+| 21:00-21:30  | ♪                                          | "BLISTER":/programmi/124            |                                                         | ♪                                         | SENZA TITOLO                                      | ♪                                     | "IL CASSETTO DEL CASINO":/programmi/363   |
+| 21:30-22:00  | "ROLLOVER DJ":/programmi/125               | x                                   | "HONOLULU EXPRESS":/programmi/374                       | "iBENCHED":/programmi/372                 | x                                                 | ♪                                     | x                                         |
+| 22:00-22:30  | x                                          | "BLUES NITE SHOUT":/programmi/168   | x                                                       | x                                         | ♪                                                 | ♪                                     | ♪                                         |
+| 22:30-23:30  | ♪                                          | ♪                                   | ♪                                                       | "OKINA IPPO":/programmi/499               | 23.00 "LONG GONE DAY":/programmi/123              | ♪                                     | ♪                                         |
+
+h4. ® = Replica
