autoplay radio, correzione palinsesto

--- a/views/palinsesto.textile
+++ b/views/palinsesto.textile
@@ -1,8 +1,7 @@
 |_.            |_. Lunedì                                   |_. Martedì                           |_. Mercoledì                                             |_. Giovedì                                 |_. Venerdì                                         |_. Sabato                              |_. Domenica                                |
 
-
 | 11:00-12:00  | "profiling JOHN DOES [R]":/programmi/390   | ♪                                   | "IL GARAGE ERMETICO [R]":/programmi/315                 | ♪                                         | ♪                                                 | ♪                                     | ♪                                         |
-| 12:00-13:00  | "profiling JOHN DOES [R]":/programmi/390   | ♪                                   | ♪                                                       | "ART PALAVER [R]":/programmi/496          | "BLUES NITE SHOUT [R]":/programmi/168             | ♪                                     | ♪                                         |                                          
+| 12:00-13:00  | x                                          | ♪                                   | ♪                                                       | "ART PALAVER [R]":/programmi/496          | "BLUES NITE SHOUT [R]":/programmi/168             | ♪                                     | ♪                                         |
 
 | 14:00-15:00  | "CALCIO & OLTRE [R]":/programmi/501        | ♪                                   | "IL CONFINE [R]":/programmi/123                         | "RADIOGRAFIA [R]"                         | "IT'S ONLY ROCK 'N' ROLL BUT I LIKE IT [R]"       | "DISAGIO OF THE UNIVERSE [R]"         | ♪                                         |
 | 15:00-16:00  | "IL VENTO DEGLI EVENTI ALLE VENTI [R]"     | "MUSIC PLAN [R]"                    | x                                                       | "ELEMENTO 115 [R]":/programmi/497         | ♪                                                 | "IL CASSETTO DEL CASINO [R]"          | "DEBUGGING ART [R]":/programmi/310        |
